bee-common/bee-packable-derive/tests/packable/fail/invalid_tag_enum.stderr
error: Tags for variants can only be literal or path expressions.
  --> $DIR/invalid_tag_enum.rs:15:15
   |
15 |     #[packable(tag = [0; 32])]
   |               ^^^^^^^^^^^^^^^
